# Jhingoor

./: .gitignore  requirements.txt
Jhingoor/: .env.example  .gitignore  .mcp.json  README.md  main.py  pyproject.toml  requirements.txt
Jhingoor/alembic/: env.py
Jhingoor/alembic/versions/: 20260413_0001_mobile_app_schema.py  20260414_0002_health_intelligence_logs.py
Jhingoor/mobile/: .env.example  App.tsx  app.json  metro.config.js  package-lock.json  package.json
Jhingoor/mobile/src/api/: client.ts
Jhingoor/mobile/src/auth/: tokenStorage.ts
Jhingoor/mobile/src/components/: AppHeader.tsx  Card.tsx  PrimaryButton.tsx  QueryClientAuthBridge.tsx
Jhingoor/mobile/src/navigation/: AuthNavigator.tsx  HealthStackNavigator.tsx  MainTabs.tsx  RootNavigator.tsx
Jhingoor/mobile/src/screens/: ActivityScreen.tsx  ChatScreen.tsx  GoogleSignInBlock.tsx  HomeScreen.tsx  InsightsDashboardScreen.tsx  LoginScreen.tsx  (+5 more)
Jhingoor/src/: main.py
Jhingoor/src/agents/: __init__.py  behavior_agent.py  diet_agent.py  orchestrator_agent.py  recovery_agent.py  types.py  women_health_agent.py  workout_agent.py
Jhingoor/src/api/: __init__.py  config.py  deps.py  errors.py  main.py  oauth_provider.py  security.py
Jhingoor/src/bot/: brain.py
Jhingoor/src/database/: crud.py  models.py  session.py  supabase_client.py  sync.py
Jhingoor/src/jhingoor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Jhingoor/src/scripts/: seed_mobile_demo.py
Jhingoor/tests/: test_agents_tools.py  test_auth_routes.py  test_auth_security.py  test_health.py  test_health_router.py
(+30 files in other folders)
