[project]
name = "jhingoor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "aiogram>=3.26.0",
    "asyncpg>=0.29.0",
    "dotenv>=0.9.9",
    "fastapi>=0.135.1",
    "google-genai>=1.68.0",
    "google-generativeai==0.8.3",
    "greenlet>=3.3.2",
    "httpx>=0.28.1",
    "pillow==10.3.0",
    "python-dotenv==1.0.1",
    "python-telegram-bot==21.1",
    "sqlalchemy>=2.0.0",
    "supabase>=2.10.0",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
